@@ -108,10 +108,10 @@ var
 begin
   try
     {$IFDEF OPSISCRIPT}
-    outlines:=
+    outlines :=
       TXStringList.Create;
     {$ELSE OPSISCRIPT}
-    outlines:=
+    outlines :=
       TStringList.Create;
     {$ENDIF OPSISCRIPT}
     Result := -1;
@@ -172,11 +172,11 @@ var
   i: integer;
 begin
   {$IFDEF OPSISCRIPT}
-    outlines:=
-      TXStringList.Create;
+  outlines :=
+    TXStringList.Create;
     {$ELSE OPSISCRIPT}
-    outlines:=
-      TStringList.Create;
+  outlines :=
+    TStringList.Create;
     {$ENDIF OPSISCRIPT}
   Result := -1;
   cmd := '/bin/bash -c "/bin/umount ' + mymountpoint + '"';
@@ -335,10 +335,64 @@ var
   resultstring, mydepotuser, mydomain, mydepot: string;
   myuser, myencryptedpass, myshare, mypass, mountoption: string;
   mounttry: integer;
+  configlist: TStringList;
 begin
   try
+    configlist := TStringList.Create;
     mydepot := opsidata.depotId;
+    myuser := 'pcpatch';
+    mydomain := '';
     //writeln('depotId=',mydepot);
+    if setAddConfigStateDefaults(True) then
+    begin
+      parastr := '{"objectId": "' + myclientid + '","configId":"clientconfig.depot.user"}';
+      resultstring := MyOpsiMethodCall('configState_getObjects', ['', parastr]);
+      if jsonIsValid(resultstring) then
+      begin
+        //'got valid json object from getOpsiServiceConfigs'
+        if jsonAsObjectGetValueByKey(resultstring, 'result', resultstring) then
+          if jsonIsArray(resultstring) then
+          begin
+            //'got json Array from result'
+            if jsonAsArrayToStringList(resultstring, configlist) then
+            begin
+              for i := 0 to configlist.Count - 1 do
+              begin
+                if jsonIsObject(configlist.Strings[i]) then
+                begin
+                  if jsonAsObjectGetValueByKey(configlist.Strings[i],
+                    'configId', configid) then
+                  begin
+                    //'got configid: ' + configid
+
+                    if LowerCase(configid) = 'clientconfig.depot.user' then
+                    begin
+                      if jsonAsObjectGetValueByKey(configlist.Strings[i],
+                        'values', values) then
+                        if jsonAsArrayGetElementByIndex(values, 0, mydepotuser) then
+                        begin
+                          LogDatei.log('Got depot user from service: ' +
+                            mydepotuser, LLNotice);
+                          if mydepotuser <> '' then
+                          begin
+                            if not divideAtFirst('\', mydepotuser, mydomain, myuser) then
+                            begin
+                              myuser := mydepotuser;
+                              mydomain := '';
+                            end;
+                          end;
+                        end;
+                    end;
+                  end;
+                end;
+              end;
+            end;
+          end;
+      end;
+      setAddConfigStateDefaults(False);
+    end;
+    (*
+      depricated: getGeneralConfigValue    (do 04.01.2022)
     resultstring := MyOpsiMethodCall('getGeneralConfigValue',
       ['clientconfig.depot.user', myclientid]);
     mydepotuser := trim(SO(resultstring).S['result']);
@@ -353,6 +407,7 @@ begin
     end
     else { we got no clientconfig.depot.user }
       myuser := 'pcpatch';
+      *)
     LogDatei.log('Will use as domain: ' + mydomain + ' as user: ' + myuser, LLNotice);
     resultstring := MyOpsiMethodCall('user_getCredentials', ['pcpatch', myclientid]);
     myencryptedpass := SO(resultstring).O['result'].S['password'];
@@ -400,7 +455,7 @@ begin
     on e: Exception do
     begin
       LogDatei.log('Exception in oslinmount: mount_depotshare: ' +
-        e.message, LLError);
+        e.ClassName + ' Message: ' + e.message, LLError);
     end;
   end;
 end;
