@@ -8,6 +8,9 @@ opsi-script (4.12.4.35) stable; urgency=low
   * osparser: getMSVersionMap: remove double ReleaseID=
   * osparser: executeWith: AllSigned Hack: use:
         "Get-Content -Raw -Path '+ tempfilename +' | Out-String | Invoke-Expression"
+  * oslinmount: replace getGeneralConfigValue by configState_getObjects
+  * osprocesses: new isProcessChildOf(searchproc,parentproc: string): boolean;
+  * new boolean opsi-script function: isProcessChildOf(<searchprocstr>, <parentprocstr>): bool;
 
 -- d.oertel <d.oertel@uib.de> Tue, 04 Jan 2022 15:00
 
